Add step 6 demo

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -13,9 +13,15 @@
   </p>
   <p id="logout">
     You are logged in as <span id="user"></span>.
+    <button>Log out</button>
   </p>
+  <p>
+    <label for="profile">Profile:</label>
+    <input id="profile">
+    <button id="view">View</button>
+  </p>
+  <script src="scripts/jquery.js"></script>
   <script src="scripts/solid-auth-client.bundle.js"></script>
-  <script src="scripts/jquery-3.4.1.min.js"></script>  
   <script src="scripts/main.js"></script>
 </body>
 </html>
