--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -5,6 +5,9 @@
   <title>SOLID DEMO</title>
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="form-group" id="cardLogin">
@@ -37,52 +40,66 @@
         </div>
       </div>
     </div>
+    <input id="profile" hidden/>
+    <button type="button" class="btn btn-primary btn-lg" id="view">Show my profile!!</button>
     <br/>
-    <div id="solid-details" class="form-group">
-      <div class="row">
-        <h3>Profile</h3>
-      </div>
-      <br/>
-      <div class="row">
-          <div class="input-group-prepend">
-              <span class="input-group-text" id="basic-addon1">@</span>
-          </div>
-          <input id="profile">
-          <button type="button" class="btn btn-primary" id="view">View</button>
-      </div>
-      <br/>
-      <div id="userDetails" style="display: none;">
-        <div class="row" style="margin-top: 10%;">
-          <div class="col-md-6">
-            <h2>Me</h2>
-          </div>
-          <div class="col-md-2"></div>
-          <div class="col-md-4">
-              <h2>My friends</h2>
-          </div>
-        </div>
-        <br/>
-        <div class="row">
-          <div class="col-md-6">
-            <div id="user-card" class="card">
-                <img id="user-img" src="..." class="card-img-top">
-                <div class="card-body">
-                  <h5 class="card-title">Full name</h5>
-                  <p id="fullName" class="card-text"></p>
+    <br/>
+    <!--Nav tabs-->
+    <ul class="nav nav-tabs" id="userTabs" style="display: none;">
+        <li class="nav-item" >
+          <a class="nav-link active" id="myProfile-tab" data-toggle="tab" href="#myProfile" role="tab" aria-controls="home" aria-selected="true">My profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="myFriends-tab" data-toggle="tab" href="#myFriends" role="tab" aria-controls="profile" aria-selected="false">My friends</a>
+        </li>
+      </ul>
+    <!---->
+    <div class="tab-content" id="myTabContent" style="display: none;">
+      <div class="tab-pane fade show active" id="myProfile" role="tabpanel" aria-labelledby="myProfile-tab">
+          <div class="form-group tabContent">
+              <div class="row">
+                <div class="col-md-12">
+                    <div id="user-card" class="card" style="width: 18rem;">
+                        <img id="user-img" src="..." class="card-img-top" >
+                        <div class="card-body">
+                          <h5 id="fullName" class="card-title"></h5>
+                          <p class="card-text"></p>
+                        </div>
+                    </div>
                 </div>
-            </div>
-          </div>
-          <div class="col-md-2"></div>
-          <div class="col-md-4" style="text-align:left;">
-            <div id="friends-card">
-              <div id="friends">
-                  <!--stuff here-->
               </div>
             </div>
-          </div>
-        </div>
       </div>
-    </div>
+      <div class="tab-pane fade" id="myFriends" role="tabpanel" aria-labelledby="myFriends-tab">
+          <div class="form-group tabContent">
+              <div class="row">
+                <div class="col-md-12">
+                    <button type="button" style="display: inline-block;" class="btn btn-primary btn-lg" id="addFriend">Add friend</button>
+                    <div class="input-group mb-3">
+                        <div class="input-group-append">
+                          <span class="input-group-text" id="basic-addon2">SolidId</span>
+                        </div>
+                        <input id="newFriend" style="display: inline-block;" type="text" class="form-control" placeholder="https://yourprofile.solid.community/profile/card#me" aria-label="SolidId" aria-describedby="basic-addon2">
+                      </div>
+                </div>
+              </div>
+              <br/>
+              <div class="row">
+                <div class="col-md-12">
+                  <button type="button" class="btn btn-primary btn-lg" id="showFriends">Show friends</button>
+                </div>
+              </div>
+              <br/>
+              <div class="row">
+                <div class="col-md-12">
+                    <div id="friends">
+                        <!--stuff here-->
+                    </div>
+                </div>
+              </div>
+          </div>      
+      </div>
+    </div>    
     
   <script src="scripts/jquery-3.4.1.min.js"></script>
   <script src="scripts/solid-auth-client.bundle.js"></script>
