add remove and fix logout

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -36,7 +36,7 @@
             </p>
             <hr class="my-4">
             Let's see what you can do!
-          <button type="button" style="float:right;" class="btn btn-danger">Log out</button>
+          <button type="button" id="btnLogout" style="float:right;" class="btn btn-danger">Log out</button>
         </div>
       </div>
     </div>
