--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>SOLID DEMO</title>
   <link rel="stylesheet" href="styles/main.css">
+  <script src="https://kit.fontawesome.com/a6d5b108d3.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -17,9 +18,6 @@
             <img src="img/solid-logo.png" height="42" width="42">
             SOLID DEMO
         </h1>
-        <p class="lead">
-        You are not logged in. So....???
-        </p>
         <button type="button" style="float:right" class="btn btn-primary">Log in</button>
         </div>
       </div>
@@ -41,7 +39,7 @@
       </div>
     </div>
     <input id="profile" hidden/>
-    <button type="button" class="btn btn-primary btn-lg" id="view">Show my profile!!</button>
+    <button type="button" class="btn btn-primary btn-lg" id="view" style="display: none;">Show my profile!!</button>
     <br/>
     <br/>
     <!--Nav tabs-->
@@ -79,7 +77,7 @@
                         <div class="input-group-append">
                           <span class="input-group-text" id="basic-addon2">SolidId</span>
                         </div>
-                        <input id="newFriend" style="display: inline-block;" type="text" class="form-control" placeholder="https://yourprofile.solid.community/profile/card#me" aria-label="SolidId" aria-describedby="basic-addon2">
+                        <input id="newFriend" style="display: inline-block;" type="text" class="form-control" placeholder="https://yourprofile.solid.community/profile/card" aria-label="SolidId" aria-describedby="basic-addon2">
                       </div>
                 </div>
               </div>
