--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="login" class="jumbotron col-md-12 bg-dark text-white">          
         <h1 class="display-4">
             <img src="img/solid-logo.png" height="42" width="42">
-            SOLID DEMO
+            ME & MY SOLID FRIENDS
         </h1>
         <button type="button" style="float:right" class="btn btn-primary">Log in</button>
         </div>
@@ -26,8 +26,8 @@
       <div class="row">
         <div id="logout" class="jumbotron col-md-12">
             <h1 class="display-4">
-                <img src="img/solid-logo.png" height="42" width="42">
-                SOLID DEMO
+                <img src="img/solid-logo.png" height="70" width="70">
+                ME & MY SOLID FRIENDS
             </h1>
             <p class="lead">
                 You are logged in as <a id="user" href="#"></a>
